--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -505,7 +505,7 @@ path[data-zip] {
     opacity: 0.5;
 }
 
-* {
+#visualizationContent * {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -874,4 +874,44 @@ div.arrow_box .carousel img {
     padding: 10px 50px;
     text-align: center;
     position: absolute;
+}
+
+#footer {
+    position: absolute;
+    padding: 20px;
+    border-top: 1px solid #C0C0C0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: #ddd;
+}
+
+#footer-text {
+  display: inline !important;
+  float: left;
+  margin-left: 10px;
+  width: 630px;
+  position: relative;
+}
+
+#footer-left-image {
+  display: inline !important;
+  position: relative;
+  float: left !important;
+  margin-left: 15px;
+  padding-right: 15px;
+  border-right: 1px solid #888;
+}
+
+#footer-right-image {
+  display: inline !important;
+  position: relative;
+  float: right;
+  margin-right: 15px;
+  margin-top: -4px;
+}
+
+.footer-container {
+    width: 945px;
+    margin: auto;
 }
