--- a/src/surveyinterface/templates/surveyinterface/base.html
+++ b/src/surveyinterface/templates/surveyinterface/base.html
@@ -23,19 +23,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href=".."><img src="{% static 'images/iutah_eu_horz.gif' %}" alt="iUtah logo"> Survey Data Viewer</a>
+                    <a class="navbar-brand" href="/"><img src="{% static 'images/iutah_eu_horz.gif' %}" alt="iUtah logo"> Survey Data Viewer</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
                             <a href="{% url 'about-view' %}">About</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'home' %}">Surveys</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'contact-view' %}">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -44,33 +38,37 @@
             <!-- /.container -->
         </nav>
         {% block body %}
+
         {% endblock %}
+
     </body>
      <!-- Footer -->
-    <!--<footer>
-        <div class="container">
+        <div id="footer" class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="..">Home</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#surveys">Surveys</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted small">Copyright &copy; XXXXX 2015. All Rights Reserved</p>
+
+                <div class="footer-container">
+                    <div id="footer-left-image">
+                        <a href="http://utepscor.org/" target="_blank"><img src="{% static 'images/epscor_logo.jpg' %}"
+                                                                            alt="Utah EPSCoR" width="156"
+                                                                            height="73"></a>
+                    </div>
+
+                    <div id="footer-text">
+                        <p>This project is funded through <a
+                                href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=1208732" target="_blank">EPS
+                            - 1208732</a>. Any opinions, findings, and
+                            conclusions or recommendations expressed in this material are those of the author(s) and do
+                            not
+                            necessarily reflect the views of the National Science Foundation.</p>
+                    </div>
+
+                    <aside id="footer-right-image">
+                        <a href="http://www.nsf.gov/div/index.jsp?div=EPSC" target="_blank">
+                            <img src="{% static 'images/nsf1.png' %}" alt="National Science Foundation" width="80"
+                                 height="80">
+                        </a>
+                    </aside>
                 </div>
             </div>
         </div>
-    </footer>-->
 </html>
