--- a/src/surveyinterface/templates/surveyinterface/base.html
+++ b/src/surveyinterface/templates/surveyinterface/base.html
@@ -23,7 +23,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/"><img src="{% static 'images/iutah_eu_horz.gif' %}" alt="iUtah logo"> Survey Data Viewer</a>
+                    <a class="navbar-brand" href="{% static '../' %}"><img src="{% static 'images/iutah_eu_horz.gif' %}" alt="iUtah logo"> Survey Data Viewer</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
