--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -408,6 +408,7 @@ li .checkbox {
 
 .navbar-brand img {
     max-height: 68px;
+    margin-right: 15px;
 }
 
 .navbar-collapse.in {
@@ -887,28 +888,29 @@ div.arrow_box .carousel img {
 }
 
 #footer-text {
-  display: inline !important;
-  float: left;
-  margin-left: 10px;
-  width: 630px;
-  position: relative;
+    display: inline !important;
+    float: left;
+    margin-left: 10px;
+    width: 630px;
+    position: relative;
+    text-shadow: 0 1px rgba(255, 255, 255, 0.6);
 }
 
 #footer-left-image {
-  display: inline !important;
-  position: relative;
-  float: left !important;
-  margin-left: 15px;
-  padding-right: 15px;
-  border-right: 1px solid #888;
+    display: inline !important;
+    position: relative;
+    float: left !important;
+    margin-left: 15px;
+    padding-right: 15px;
+    border-right: 1px solid #888;
 }
 
 #footer-right-image {
-  display: inline !important;
-  position: relative;
-  float: right;
-  margin-right: 15px;
-  margin-top: -4px;
+    display: inline !important;
+    position: relative;
+    float: right;
+    margin-right: 15px;
+    margin-top: -4px;
 }
 
 .footer-container {
