--- a/src/surveyinterface/templates/surveyinterface/about.html
+++ b/src/surveyinterface/templates/surveyinterface/about.html
@@ -3,14 +3,14 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="container mainContainer">
         <div class="row">
             <div class="col-xs-12">
-                <h1>About</h1>
+                <h2 class="page-header">About</h2>
 
                 <p>The Survey Data Viewer is a web application for visualizing the results of social science survey data
                     developed as part of the iUTAH Modeling and Data Federation (<a target="_blank" href="http://data.iutahepscor.org">http://data.iutahepscor.org</a>). For the
-                    code and additional documentation, see <a target="_blank" href="http://github.com/UCHIC/SurveyDataViewer">http://github.com/UCHIC/SurveyDataViewer</a>. The code is may be
+                    code and additional documentation, see <a target="_blank" href="http://github.com/UCHIC/SurveyDataViewer">http://github.com/UCHIC/SurveyDataViewer</a>. The code may be
                     adopted for general use following the stipulations in the code repository
                     (https://github.com/UCHIC/SurveyDataViewer/blob/master/LICENSE).</p>
             </div>
