--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -140,7 +140,7 @@
         </div>
     </div>
 
-    <div id="mainContent">
+    <div class="mainContainer" id="mainContent">
         <div class="panel-left">
             <div id="surveyInfo">
                 <img src="{% static 'images/survey-icon.png' %}" alt="...">
