--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -3,8 +3,6 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    min-width: 500px;
-    min-height: 600px;
 }
 
 body,
@@ -33,6 +31,7 @@ h6 {
     -moz-border-radius: 4px;
     border-radius: 4px;
     padding: 20px;
+    margin-bottom: 20px;
     height: 300px;
 }
 
@@ -100,9 +99,10 @@ h6 {
 }
 
 #surveyContainer {
-    width: 1000px;
+    max-width: 1000px;
     margin: auto;
-    margin-top: 71px;
+    padding:10px;
+      overflow-x: hidden;
 }
 
 svg {
@@ -112,6 +112,10 @@ svg {
 #mainContent {
     height: calc(100% - 70px);
     overflow: auto;
+}
+
+.mainContainer {
+  min-height: calc(100% - 187px);
 }
 
 #listQuestions {
@@ -878,7 +882,6 @@ div.arrow_box .carousel img {
 }
 
 #footer {
-    position: absolute;
     padding: 20px;
     border-top: 1px solid #C0C0C0;
     left: 0;
@@ -891,7 +894,7 @@ div.arrow_box .carousel img {
     display: inline !important;
     float: left;
     margin-left: 10px;
-    width: 630px;
+    max-width: 630px;
     position: relative;
     text-shadow: 0 1px rgba(255, 255, 255, 0.6);
 }
@@ -914,6 +917,6 @@ div.arrow_box .carousel img {
 }
 
 .footer-container {
-    width: 945px;
+    max-width: 945px;
     margin: auto;
 }
