Fixed general responsive issues.

--- a/src/surveyinterface/templates/surveyinterface/survey-info.html
+++ b/src/surveyinterface/templates/surveyinterface/survey-info.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block body %}
-    <div class="container">
+    <div class="container mainContainer">
         <div class="row">
             <div class="col-sm-12">
                 <a id="btn-back" href="../">
