--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -110,12 +110,12 @@ svg {
 }
 
 #mainContent {
-    height: calc(100% - 70px);
+    height: calc(100% - 100px);
     overflow: auto;
 }
 
 .mainContainer {
-  min-height: calc(100% - 187px);
+  min-height: calc(100% - 217px);
 }
 
 #listQuestions {
@@ -406,10 +406,6 @@ li .checkbox {
     font-weight: 400;
 }
 
-.navbar-nav.navbar-right:last-child {
-    margin-right: 0;
-}
-
 .navbar-brand img {
     max-height: 68px;
     margin-right: 15px;
@@ -421,24 +417,30 @@ li .checkbox {
 }
 
 .navbar > .container {
-    margin-left: 15px;
+    /*margin-left: 15px;*/
+}
+
+.container>.navbar-header {
+  height:100%;
 }
 
 .navbar .container {
-    position: absolute;
-    width: 90%;
+    /*position: absolute;*/
+    /*width: 90%;*/
+    height:100%;
+    margin-left:0;
 }
 
 .navbar-brand {
     color: #c8c8c8;
     float: left;
-    padding: 0 15px;
+    /*padding: 0 15px;*/
 }
 
 .navbar {
     border-radius: 0;
     margin-bottom: 0;
-    height: 70px;
+    height: 100px;
     background-image: -webkit-linear-gradient(#484e55, #3a3f44 60%, #313539);
     background-image: -o-linear-gradient(#484e55, #3a3f44 60%, #313539);
     background-image: -webkit-gradient(linear, left top, left bottom, from(#484e55), color-stop(60%, #3a3f44), to(#313539));
@@ -453,10 +455,17 @@ li .checkbox {
 
 .navbar-inverse .navbar-brand {
     color: #c9c9c9;
+    height:100%;
 }
 
 .navbar-inverse .navbar-nav > li > a {
     color: #c9c9c9;
+}
+
+ul.navbar-nav  {
+    margin-top: 23px;
+    margin-left: 40px;
+    border-radius: 4px;
 }
 
 .intro-header {
@@ -658,8 +667,8 @@ path[data-zip] {
 
 .modal-backdrop {
     opacity: 0.1 !important;
-    height: calc(100% - 70px);
-    margin-top: 70px;
+    height: calc(100% - 100px);
+    margin-top: 100px;
 }
 
 /* -----  Arrow box ---------- */
@@ -817,13 +826,13 @@ div.arrow_box .carousel img {
     width: 100%;
     position: absolute;
     top: 0;
-    height: calc(100% - 70px);
-    margin-top: 70px;
+    height: calc(100% - 30px);
+    margin-top: 30px;
 }
 
 #guideModal {
     height: calc(100% - 70px);
-    margin-top: 70px;
+    margin-top: 100px;
 }
 
 .tip-title {
@@ -835,9 +844,9 @@ div.arrow_box .carousel img {
 #loadingScreen {
     background: #000;
     position: absolute;
-    top: 70px;
+    top: 100px;
     width: 100%;
-    height: calc(100% - 70px);
+    height: calc(100% - 100px);
     text-align: center;
     z-index: 1051;
     border-top: 1px solid #444;
