--- a/src/surveyinterface/templates/surveyinterface/base.html
+++ b/src/surveyinterface/templates/surveyinterface/base.html
@@ -30,8 +30,12 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
+                            <a href="{% url 'home' %}">Home</a>
+                        </li>
+                        <li>
                             <a href="{% url 'about-view' %}">About</a>
                         </li>
+
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
