--- a/src/surveyinterface/templates/surveyinterface/survey-info.html
+++ b/src/surveyinterface/templates/surveyinterface/survey-info.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="col-xs-12">
-                <h1>{{ object.name }}</h1>
+                <h2 class="page-header">{{ object.name }}</h2>
                 <h4>{{ object.description }}</h4>
 
                 <p>{{ object.information }}</p>
