--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="mainContainer" id="mainContent">
-        <div class="panel-left">
+        <div class="panel-left col-xs-12 col-md-2">
             <div id="surveyInfo">
                 <img src="{% static 'images/survey-icon.png' %}" alt="...">
 
@@ -155,7 +155,7 @@
             </div>
         </div>
 
-        <div id="visualizationContent">
+        <div id="visualizationContent" class="col-xs-12 col-md-10">
             <div id="top-bar">
                 <div id="captionContainer" class="panel panel-primary">
                     <div class="panel-heading">
