--- a/src/surveyinterface/templates/surveyinterface/about.html
+++ b/src/surveyinterface/templates/surveyinterface/about.html
@@ -12,7 +12,7 @@
                     developed as part of the iUTAH Modeling and Data Federation (<a target="_blank" href="http://data.iutahepscor.org">http://data.iutahepscor.org</a>). For the
                     code and additional documentation, see <a target="_blank" href="http://github.com/UCHIC/SurveyDataViewer">http://github.com/UCHIC/SurveyDataViewer</a>. The code may be
                     adopted for general use following the stipulations in the code repository
-                    (https://github.com/UCHIC/SurveyDataViewer/blob/master/LICENSE).</p>
+                    (<a href="https://github.com/UCHIC/SurveyDataViewer/blob/master/LICENSE" target="_blank">https://github.com/UCHIC/SurveyDataViewer/blob/master/LICENSE</a>).</p>
             </div>
         </div>
     </div>
