--- a/src/surveyinterface/templates/surveyinterface/survey-info.html
+++ b/src/surveyinterface/templates/surveyinterface/survey-info.html
@@ -4,7 +4,7 @@
 {% block body %}
     <div class="container mainContainer">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-xs-12">
                 <a id="btn-back" href="../">
                     <span class="glyphicon glyphicon-eur"></span><span>Back to browsing</span>
                 </a>
