--- a/src/surveyinterface/templates/surveyinterface/survey-info.html
+++ b/src/surveyinterface/templates/surveyinterface/survey-info.html
@@ -16,7 +16,7 @@
 
                 <a target="_blank" href="{% static survey.pdf.url %}" id="view-instrument" href="../" type="button"
                    class="btn btn-lg gray-button">
-                    view copy of survey
+                    View copy of survey
                 </a>
             </div>
             <div class="col-xs-12">
