--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -1,6 +1,8 @@
 ﻿html, body {
     width: 100%;
     height: 100%;
+    min-width:500px;
+    min-height:500px;
     margin: 0;
     padding: 0;
 }
@@ -280,7 +282,7 @@ text.shadow {
     top: -3px;
 }
 
-span.btnAdd, span.btnSubstract {
+span.btnAdd, span.btnSubtract {
     cursor: pointer;
     font-size: 14px;
     color: #AAA;
