--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -1,10 +1,9 @@
 ﻿html, body {
     width: 100%;
     height: 100%;
-    min-width:500px;
-    min-height:500px;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body,
