--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -3,7 +3,6 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 body,
@@ -18,6 +17,7 @@ h6 {
 
 #visualizationContent {
     height: 100%;
+    max-height: 100%;
     text-align: center;
     float: right;
     overflow: hidden;
