--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -55,11 +55,14 @@ h6 {
     padding: 4px;
     float: left;
     display: inline;
-    width: 40px;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
 }
 
 #surveyInfo {
     width: 100%;
+    height: 60px;
     border: 1px solid rgb(163, 163, 163);
     float: left;
 }
@@ -102,7 +105,7 @@ h6 {
     max-width: 1000px;
     margin: auto;
     padding:10px;
-      overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 svg {
@@ -120,7 +123,7 @@ svg {
 
 #listQuestions {
     width: 100%;
-    height: calc(100% - 43px);
+    height: calc(100% - 60px);
     overflow-y: scroll;
     overflow-x: hidden;
     float: left;
