--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -342,6 +342,10 @@ hr {
     background: #EFEFEF;
 }
 
+.info-symbol:hover {
+    cursor: pointer;
+}
+
 #listQuestions li:not(.indented) {
     border: 1px solid #aaa;
     border-top: 0;
