¯\_ツ_/¯ Fixed unicode error in html.

--- a/src/surveyinterface/templates/surveyinterface/survey-info.html
+++ b/src/surveyinterface/templates/surveyinterface/survey-info.html
@@ -13,7 +13,7 @@
                    class="btn btn-lg blue-button">
                     Explore results
                 </a>
-                <a onclick="ga('send', 'event', 'PDF', 'Download', 'Survey Document – PDF Download');"
+                <a onclick="ga('send', 'event', 'PDF', 'Download', 'Survey Document - PDF Download');"
                    target="_blank" href="{% static survey.pdf.url %}" id="view-instrument" href="../" type="button"
                    class="btn btn-lg gray-button">
                     View copy of survey
