--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -20,8 +20,9 @@ h6 {
     max-height: 100%;
     text-align: center;
     float: right;
-    overflow: hidden;
     padding: 4px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #surveyContainer .survey {
@@ -959,4 +960,10 @@ div.arrow_box .carousel img {
     margin: auto;
     text-align:center;
     padding: 20px 0;
+}
+
+#lstYAxisMode {
+    max-height: 500px;
+    max-width: 800px;
+    overflow: auto;
 }
