--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -184,10 +184,16 @@
                     </div>
                 </div>
             </div>
+            <span id="btn-order-rows" data-order="1" class="btn" title="Order">
+                <span class="glyphicon glyphicon-triangle-bottom"></span>
+            </span>
+            <span id="btn-order-columns" data-order="1" class="btn" title="Order">
+                <span class="glyphicon glyphicon-triangle-right"></span>
+            </span>
             <div class="dropdown">
                 <button title="Demogaphic variables" id="btnCategories" class="btn dropdown-toggle" type="button"
                         data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-list" aria-hidden="true"> ▼</span>
+                    <span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
                 </button>
                 <ul id="lstYAxisMode" class="dropdown-menu">
                     <li><a data-axis="All" href="#">All</a></li>
