--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -193,7 +193,8 @@
             <div class="dropdown">
                 <button title="Demogaphic variables" id="btnCategories" class="btn dropdown-toggle" type="button"
                         data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
+                    <span class="glyphicon glyphicon-th-list pull-left" aria-hidden="true"></span>
+                    <span class="glyphicon glyphicon-chevron-down pull-right" aria-hidden="true"></span>
                 </button>
                 <ul id="lstYAxisMode" class="dropdown-menu">
                     <li><a data-axis="All" href="#">All</a></li>
