--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -63,7 +63,6 @@ h6 {
 
 #surveyInfo {
     width: 100%;
-    height: 60px;
     border: 1px solid rgb(163, 163, 163);
     float: left;
 }
@@ -125,7 +124,7 @@ svg {
 #listQuestions {
     width: 100%;
     height: calc(100% - 60px);
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     float: left;
     margin-bottom: 0;
