Added caption to demographics button

--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -191,9 +191,9 @@
                 <span class="glyphicon glyphicon-triangle-right"></span>
             </span>
             <div class="dropdown">
-                <button title="Demogaphic variables" id="btnCategories" class="btn dropdown-toggle" type="button"
+                <button title="Demographic variables" id="btnCategories" class="btn dropdown-toggle" type="button"
                         data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-th-list pull-left" aria-hidden="true"></span>
+                    <span >Group Results&nbsp;</span>
                     <span class="glyphicon glyphicon-chevron-down pull-right" aria-hidden="true"></span>
                 </button>
                 <ul id="lstYAxisMode" class="dropdown-menu">
