--- a/src/surveyinterface/templates/surveyinterface/about.html
+++ b/src/surveyinterface/templates/surveyinterface/about.html
@@ -5,7 +5,7 @@
 
     <div class="container mainContainer">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-sm-12">
                 <h2 class="page-header">About</h2>
 
                 <p>The Survey Data Viewer is a web application for visualizing the results of social science survey data
