--- a/src/surveyinterface/templates/surveyinterface/survey-info.html
+++ b/src/surveyinterface/templates/surveyinterface/survey-info.html
@@ -4,7 +4,7 @@
 {% block body %}
     <div class="container mainContainer">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-sm-12">
                 <a id="btn-back" href="../">
                     <span class="glyphicon glyphicon-eur"></span><span>Back to browsing</span>
                 </a>
@@ -19,7 +19,7 @@
                     View copy of survey
                 </a>
             </div>
-            <div class="col-xs-12">
+            <div class="col-sm-12">
                 <h2 class="page-header">{{ object.name }}</h2>
                 <h4>{{ object.description }}</h4>
                 <p>{{ object.information }}</p>
