--- a/src/surveyinterface/templates/surveyinterface/contact.html
+++ b/src/surveyinterface/templates/surveyinterface/contact.html
@@ -4,7 +4,7 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-sm-12">
                 <h1>Contact</h1>
             </div>
         </div>
