--- a/src/surveyinterface/templates/surveyinterface/survey.html
+++ b/src/surveyinterface/templates/surveyinterface/survey.html
@@ -146,7 +146,7 @@
         <div class="panel-left col-sm-2">
             <div id="surveyInfo">
                 <div class="caption">
-                    <h4><i style="margin-left: 4px;" class="fas fa-users"></i> {{ object.name }}</h4>
+                    <h4 title="{{ object.name }}"><i style="margin-left: 4px;" class="fas fa-users"></i> {{ object.name }}</h4>
                 </div>
             </div>
             <div id="listQuestions" class="panel-group">
