--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -3,6 +3,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 500px;
 }
 
 body,
@@ -28,12 +29,12 @@ h6 {
 #surveyContainer .survey {
     border: 1px solid #ddd;
     background-color: #F3FAFF;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
     padding: 20px;
     margin-bottom: 20px;
-    height: 300px;
+    height: 330px;
 }
 
 #txtDescription {
@@ -46,7 +47,6 @@ h6 {
 }
 
 .survey .caption {
-    padding: 9px;
     color: #333;
     float: left;
     width: 150px;
@@ -58,6 +58,14 @@ h6 {
     border: 1px solid rgb(163, 163, 163);
     float: left;
     overflow: hidden;
+}
+
+#surveyInfo .caption {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    height: 84px;
 }
 
 .panel-left {
@@ -99,6 +107,22 @@ h6 {
     margin: auto;
     padding:10px;
     overflow-x: hidden;
+}
+
+#surveyContainer .survey-title, #surveyContainer .survey-description {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+}
+
+#surveyContainer .survey-title {
+    height: 68px;
+    -webkit-line-clamp: 3;
+}
+
+#surveyContainer .survey-description {
+    height: 80px;
+    -webkit-line-clamp: 4;
 }
 
 svg {
@@ -620,7 +644,6 @@ path[data-zip] {
     text-shadow: 0 1px rgba(255, 255, 255, 0.6);
     padding: 5px 8px 5px 8px;
     border-radius: 4px;
-    margin: 0 0 0 5px;
     display: inline-block;
     min-width: 50px;
     text-align: center;
@@ -650,7 +673,6 @@ path[data-zip] {
     text-shadow: 0 1px rgba(255, 255, 255, 0.6);
     padding: 5px 8px 5px 8px;
     border-radius: 4px;
-    margin: 0 0 0 5px;
     display: inline-block;
     min-width: 50px;
     text-align: center;
@@ -926,12 +948,7 @@ div.arrow_box .carousel img {
 }
 
 .buttons-container {
-    margin-top: 20px;
-    bottom: 0;
-    left: 0;
-    padding: 10px 50px;
-    text-align: center;
-    position: absolute;
+    margin-top: 15px;
 }
 
 #footer {
