--- a/src/surveyinterface/templates/surveyinterface/base.html
+++ b/src/surveyinterface/templates/surveyinterface/base.html
@@ -33,7 +33,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/iutah_eu_horz.gif' %}" alt="iUtah logo"><span>Survey Data Viewer</span></a>
+                    <a class="navbar-brand" href="{% url 'home' %}">
+                        <img class="img-responsive" src="{% static 'images/iutah_eu_horz.gif' %}" alt="iUtah logo">
+                        <span> Survey Data Viewer</span>
+                    </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
