--- a/src/surveyinterface/static/css/style.css
+++ b/src/surveyinterface/static/css/style.css
@@ -130,12 +130,12 @@ svg {
 }
 
 #mainContent {
-    height: calc(100% - 100px);
+    height: calc(100% - 75px);
     overflow: hidden;
 }
 
 .mainContainer {
-  min-height: calc(100% - 261px);
+  min-height: calc(100% - 236px);
 }
 
 #listQuestions {
@@ -280,8 +280,7 @@ text.shadow {
 }
 
 #btnCategories {
-    height: 54px;
-    border-radius: 1px;
+    height: 68px;
     color: #000;
     background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
     background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
@@ -289,15 +288,12 @@ text.shadow {
     background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
     text-shadow: 0 1px 0 #fff;
     border: 1px solid rgb(108, 96, 96);
-    text-align: left;
     position: absolute;
     left: 7px;
     top: 5px;
-}
-
-#btnCategories .glyphicon-chevron-down {
-    margin-top: 12px;
-    margin-left: 9px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 
 span.btnAdd, span.btnSubtract {
@@ -439,9 +435,8 @@ li .checkbox {
 }
 
 .navbar-brand img {
-    max-height: 68px;
-    margin-right: 15px;
     display: inline-block;
+    height: 100%;
 }
 
 .navbar-collapse.in {
@@ -473,7 +468,7 @@ li .checkbox {
 .navbar {
     border-radius: 0;
     margin-bottom: 0;
-    height: 100px;
+    height: 75px;
     z-index:1;
     background-image: -webkit-linear-gradient(#484e55, #3a3f44 60%, #313539);
     background-image: -o-linear-gradient(#484e55, #3a3f44 60%, #313539);
@@ -489,8 +484,9 @@ li .checkbox {
 
 .navbar-inverse .navbar-brand {
     color: #DDD;
-    height:100%;
+    height: 100%;
     text-shadow: 0 1px 0 #000;
+    padding: 4px;
 }
 
 .navbar-inverse .navbar-nav > li > a {
@@ -498,7 +494,7 @@ li .checkbox {
 }
 
 ul.navbar-nav  {
-    margin-top: 23px;
+    margin-top: 12px;
     margin-left: 40px;
     border-radius: 4px;
 }
@@ -910,9 +906,9 @@ div.arrow_box .carousel img {
 #loadingScreen {
     background: #000;
     position: absolute;
-    top: 100px;
+    top: 75px;
     width: 100%;
-    height: calc(100% - 100px);
+    height: calc(100% - 75px);
     text-align: center;
     z-index: 1051;
     border-top: 1px solid #444;
@@ -991,7 +987,7 @@ div.arrow_box .carousel img {
 }
 
 #btn-order-rows {
-    left: 157px;
+    left: 95px;
     top: 100px;
     height: 16px;
 }
